Fixed spacing in css

--- a/css/main.css
+++ b/css/main.css
@@ -59,3 +59,31 @@ ol ul {
   align-items: center;
   align-self: stretch;
 }
+
+.btn {
+  border-radius: 3em;
+  background-color: #6f00e7;
+  color: #fff;
+  text-decoration: none;
+  font-family: Oswald, sans-serif;
+  padding: .5em 1.5em .7em;
+  font-weight: bold;
+}
+
+ul li {
+  padding: 0 .25em;
+}
+
+ul li:first-child {
+  margin-right: auto;
+}
+
+ul a img {
+  margin-right: .25em;
+}
+
+ul a {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
